# app-actigraphy

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  actigraphy.html  index.html  pyproject.toml  search.js
.github/ISSUE_TEMPLATE/: bug_report.yaml  development_task.yaml
.github/workflows/: deploy.yaml  release.yaml  test.yaml
actigraphy/: algorithms.html  app.html  components.html  core.html  database.html  io.html  plotting.html
actigraphy/components/: app_license.html  day_slider.html  dst_banner.html  file_selection.html  finished_checkbox.html  graph.html  switches.html  utils.html
actigraphy/core/: callback_manager.html  cli.html  config.html  exceptions.html  utils.html
actigraphy/database/: crud.html  database.html  models.html  utils.html
actigraphy/io/: data_import.html  ggir_files.html  metadata.html  minor_files.html  preprocess.html  utils.html
actigraphy/plotting/: sensor_plots.html
src/actigraphy/: __main__.py  app.py  app_old.py  io.py
src/actigraphy/components/: app_license.py  day_slider.py  dst_banner.py  file_selection.py  finished_checkbox.py  graph.py  switches.py  utils.py
src/actigraphy/core/: callback_manager.py  callbacks.py  cli.py  components.py  config.py  exceptions.py  utils.py
src/actigraphy/database/: crud.py  database.py  models.py  utils.py
src/actigraphy/io/: data_import.py  ggir_files.py  metadata.py  minor_files.py  ms4.py  preprocess.py  utils.py
src/actigraphy/plotting/: graphs.py  sensor_plots.py
tests/: conftest.py  test_fibonacci.py
tests/data/: metadata.RData  ms4.RData
tests/unit/: test___main__.py  test_app.py  test_cli.py  test_config.py  test_core_utils.py  test_data_import.py  test_database.py  test_io.py  test_io_utils.py  test_minor_files.py  test_models.py  test_sensor_plots.py  test_switches.py  test_utils.py
tests/unit/components/: callback_test_manager.py  test_finished_checkbox.py  test_graph.py  test_switches.py
