[tool.poetry]
name = "actigraphy"
version = "0.1.0"
description = "A beautiful description."
authors = ["Reinder Vos de Wael <reinder.vosdewael@childmind.org>"]
license = "LGPL-2.1"
readme = "README.md"
packages = [{include = "actigraphy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
dash = "^2.12.1"
dash-bootstrap-components = "^1.4.2"
dash-daq = "^0.5.0"
matplotlib = "^3.7.2"
numpy = "^1.25.2"
pandas = "^2.0.3"
plotly = "^5.16.1"
rdata = "^0.9"
pydantic = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
mypy = "^1.4.0"
black = "^23.3.0"
isort = "^5.12.0"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"

[tool.poetry.group.docs.dependencies]
pdoc = "^14.0.0"

[tool.poetry.extras]
docs = ["pdoc"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.mypy]
ignore_missing_imports = true
